--- a/tesis/page_beritaproposaltesis.html
+++ b/tesis/page_beritaproposaltesis.html
@@ -186,9 +186,9 @@
         <div id="timPenguji">
         <h6 class="fw-bold">Tim Penguji:</h6>
         <ol>
+            <li id="ketuaSidang">-</li>
             <li id="penguji1">-</li>
             <li id="penguji2">-</li>
-            <li id="penguji3">-</li>
         </ol>
         </div>
 
@@ -210,6 +210,8 @@
 
         <div class="mt-3 mb-3">
             <button id="btnPrintBAProposalTesis" class="btn btn-primary">Print Berita Acara</button>
+            <button id="btnSaveRevisi" class="btn btn-outline-secondary ms-2">Simpan Catatan Revisi</button>
+            <button id="btnLoadRevisi" class="btn btn-outline-secondary ms-2">Load Catatan Revisi</button>
         </div>
 
         <div class="mt-5">
@@ -309,9 +311,9 @@
         return;
         }
 
-        const nilaiP1 = parseFloat(row[35]) || 0;
-        const nilaiP2 = parseFloat(row[23]) || 0;
-        const nilaiP3 = parseFloat(row[47]) || 0;
+        const nilaiP1 = parseFloat(row[29]) || 0;
+        const nilaiP2 = parseFloat(row[41]) || 0;
+        const nilaiP3 = parseFloat(row[53]) || 0;
         const nilaiRekap = (0.25 * nilaiP1 + 0.5 * nilaiP2 + 0.25 * nilaiP3).toFixed(2);
 
         document.getElementById("nilaiP1").textContent = nilaiP1;
@@ -319,9 +321,9 @@
         document.getElementById("nilaiP3").textContent = nilaiP3;
         document.getElementById("nilaiRekap").textContent = nilaiRekap;
 
-        document.getElementById("penguji1").textContent = row[24] || "-";
-        document.getElementById("penguji2").textContent = row[12] || "-";
-        document.getElementById("penguji3").textContent = row[36] || "-";
+        document.getElementById("ketuaSidang").textContent = row[18] || "-";
+        document.getElementById("penguji1").textContent = row[30] || "-";
+        document.getElementById("penguji2").textContent = row[42] || "-";
 
     } catch (err) {
         console.error(err);
