--- a/tesis/page_beritaujiantesis.html
+++ b/tesis/page_beritaujiantesis.html
@@ -181,9 +181,9 @@
         <div id="timPenguji">
         <h6 class="fw-bold">Tim Penguji:</h6>
         <ol>
+            <li id="ketuaSidang">-</li>
             <li id="penguji1">-</li>
             <li id="penguji2">-</li>
-            <li id="penguji3">-</li>
         </ol>
         </div>
 
@@ -204,6 +204,8 @@
 
         <div class="mt-3 mb-3">
             <button id="btnPrintBAUjianTesis" class="btn btn-primary">Print Berita Acara</button>
+            <button id="btnSaveRevisi" class="btn btn-outline-secondary ms-2">Simpan Catatan Revisi</button>
+            <button id="btnLoadRevisi" class="btn btn-outline-secondary ms-2">Load Catatan Revisi</button>
         </div>
 
         <div class="mt-5">
@@ -301,9 +303,9 @@
         return;
         }
 
-        const nilaiP1 = parseFloat(row[109]) || 0;
-        const nilaiP2 = parseFloat(row[120]) || 0;
-        const nilaiP3 = parseFloat(row[98]) || 0; 
+        const nilaiP1 = parseFloat(row[104]) || 0;
+        const nilaiP2 = parseFloat(row[115]) || 0;
+        const nilaiP3 = parseFloat(row[126]) || 0; 
         const nilaiRekap = (0.25 * nilaiP1 + 0.25 * nilaiP2 + 0.5 * nilaiP3).toFixed(2);
 
         document.getElementById("nilaiP1").textContent = nilaiP1;
@@ -311,9 +313,9 @@
         document.getElementById("nilaiP3").textContent = nilaiP3;
         document.getElementById("nilaiRekap").textContent = nilaiRekap;
 
-        document.getElementById("penguji1").textContent = row[99] || "-";
-        document.getElementById("penguji2").textContent = row[110] || "-"; 
-        document.getElementById("penguji3").textContent = row[88] || "-";
+        document.getElementById("ketuaSidang").textContent = row[94] || "-";
+        document.getElementById("penguji1").textContent = row[105] || "-";
+        document.getElementById("penguji2").textContent = row[116] || "-"; 
 
     } catch (err) {
         console.error(err);
