--- a/tesis/page_rekaptesis.html
+++ b/tesis/page_rekaptesis.html
@@ -101,11 +101,11 @@
         <button id="btnLoadRekapTesis" class="btn btn-primary mb-3">Load Nilai</button>
 
         <div id="timPenguji">
-        <h6 class="fw-bold">Tim Penguji:</h6>
+        <h6 class="fw-bold">Tim Penguji Sidang Akhir:</h6>
         <ol>
+            <li id="ketuaSidang">-</li>
             <li id="penguji1">-</li>
             <li id="penguji2">-</li>
-            <li id="penguji3">-</li>
         </ol>
         </div>
 
@@ -180,9 +180,9 @@
         return;
         }
 
-        const nilaiProposal = parseFloat(row[48]) || 0;
-        const nilaiSeminar = parseFloat(row[121]) || 0;
-        const nilaiPublikasi = parseFloat(row[86]) || 0; 
+        const nilaiProposal = parseFloat(row[54]) || 0;
+        const nilaiSeminar = parseFloat(row[127]) || 0;
+        const nilaiPublikasi = parseFloat(row[92]) || 0; 
         const nilaiAkhir = ((2 * nilaiProposal + 5 * nilaiSeminar + 1 * nilaiPublikasi)/8).toFixed(2);
 
         // Tentukan nilai huruf
@@ -223,9 +223,9 @@
         document.getElementById("nilaiAkhir").textContent = nilaiAkhir;
         document.getElementById("nilaiHuruf").textContent = nilaiHuruf;
 
-        document.getElementById("penguji1").textContent = row[99] || "-";
-        document.getElementById("penguji2").textContent = row[110] || "-"; 
-        document.getElementById("penguji3").textContent = row[88] || "-";
+        document.getElementById("ketuaSidang").textContent = row[94] || "-";
+        document.getElementById("penguji1").textContent = row[105] || "-";
+        document.getElementById("penguji2").textContent = row[116] || "-"; 
 
     } catch (err) {
         console.error(err);
