--- a/skripsi/page_beritaproposalskripsi.html
+++ b/skripsi/page_beritaproposalskripsi.html
@@ -208,6 +208,8 @@
 
         <div class="mt-3 mb-3">
             <button id="btnPrintBAProposalSkripsi" class="btn btn-primary">Print Berita Acara</button>
+            <button id="btnSaveRevisi" class="btn btn-outline-secondary ms-2">Simpan Catatan Revisi</button>
+            <button id="btnLoadRevisi" class="btn btn-outline-secondary ms-2">Load Catatan Revisi</button>
         </div>
 
         <div class="mt-5">
@@ -305,9 +307,9 @@
         return;
         }
 
-        const nilaiP1 = parseFloat(row[21]) || 0;
-        const nilaiP2 = parseFloat(row[30]) || 0;
-        const nilaiP3 = parseFloat(row[39]) || 0;
+        const nilaiP1 = parseFloat(row[25]) || 0;
+        const nilaiP2 = parseFloat(row[34]) || 0;
+        const nilaiP3 = parseFloat(row[43]) || 0;
         const nilaiRekap = (0.5 * nilaiP1 + 0.25 * nilaiP2 + 0.25 * nilaiP3).toFixed(2);
 
         document.getElementById("nilaiP1").textContent = nilaiP1;
@@ -315,9 +317,9 @@
         document.getElementById("nilaiP3").textContent = nilaiP3;
         document.getElementById("nilaiRekap").textContent = nilaiRekap;
 
-        document.getElementById("pembimbingskripsi").textContent = row[13] || "-";
-        document.getElementById("penguji1").textContent = row[22] || "-";
-        document.getElementById("penguji2").textContent = row[31] || "-";
+        document.getElementById("pembimbingskripsi").textContent = row[17] || "-";
+        document.getElementById("penguji1").textContent = row[26] || "-";
+        document.getElementById("penguji2").textContent = row[35] || "-";
 
     } catch (err) {
         console.error(err);
