--- a/tesis/page_penilaianpublikasimagister.html
+++ b/tesis/page_penilaianpublikasimagister.html
@@ -101,6 +101,11 @@
                         <td class="info-colon">:</td>
                         <td id="judultesis"></td>
                     </tr>
+                    <tr>
+                        <td class="info-label">Link Google Drive Publikasi</td>
+                        <td class="info-colon">:</td>
+                        <td id="linkGoogleDrivePublikasiTesis"></td>
+                    </tr>                       
                 </tbody>
                 </table>
                     
@@ -207,8 +212,9 @@
 
                 <!-- Action Buttons -->
                 <div class="mt-4 text-end">
-                    <button id="btnKirim" class="btn btn-primary me-2">Kirim Nilai</button>
-                    <button id="btnPrint" class="btn btn-outline-primary">Print Nilai</button>
+                    <button id="btnKirim" class="btn btn-primary me-1">Kirim Nilai</button>
+                    <button id="btnPrint" class="btn btn-outline-primary me-1">Print Nilai</button>
+                    <button id="btnLoadNilaiPublikasiTesis" class="btn btn-outline-primary">Load Nilai</button>
                 </div>
 
                 <p>
@@ -250,7 +256,8 @@
                 nama: params.get("nama") || "",
                 nim: params.get("nim") || "",
                 pembimbing: params.get("pembimbing") || "",
-                judul: params.get("judul") || ""
+                judul: params.get("judul") || "",
+                linkGoogleDrivePublikasiTesis: params.get("linkGoogleDrivePublikasiTesis") || ""
             };
         }
 
@@ -261,6 +268,15 @@
             document.getElementById("nim").textContent = data.nim;
             document.getElementById("pembimbingUtama").textContent = data.pembimbing;
             document.getElementById("judultesis").textContent = data.judul;
+            
+            const linkCell = document.getElementById("linkGoogleDrivePublikasiTesis");
+            const url = data.linkGoogleDrivePublikasiTesis;
+
+            if (url) {
+                linkCell.innerHTML = `<a href="${url}" target="_blank" rel="noopener noreferrer">${url}</a>`;
+                } else {
+                linkCell.textContent = "";
+            }
         });
     </script>
     <script>
