--- a/tesis/page_penilaianujiantesis.html
+++ b/tesis/page_penilaianujiantesis.html
@@ -89,6 +89,11 @@
                         <td class="info-colon">:</td>
                         <td id="judulTesis"></td>
                     </tr>
+                    <tr>
+                        <td class="info-label">Link Google Drive Naskah Tesis</td>
+                        <td class="info-colon">:</td>
+                        <td id="linkGoogleDriveNaskahTesis"></td>
+                    </tr>                     
                 </tbody>
                 </table>
                     
@@ -200,8 +205,9 @@
 
                 <!-- Action Buttons -->
                 <div class="mt-4 text-end">
-                    <button id="btnKirimNilaiUjianTesis" class="btn btn-primary me-2">Kirim Nilai</button>
-                    <button id="btnPrintNilaiUjianTesis" class="btn btn-outline-primary">Print Nilai</button>
+                    <button id="btnKirimNilaiUjianTesis" class="btn btn-primary me-1">Kirim Nilai</button>
+                    <button id="btnPrintNilaiUjianTesis" class="btn btn-outline-primary me-1">Print Nilai</button>
+                    <button id="btnLoadNilaiNaskahTesis" class="btn btn-outline-primary">Load Nilai</button>
                 </div>
 
                 <div class="mt-5">
@@ -231,7 +237,8 @@
                 nama: params.get("nama") || "",
                 nim: params.get("nim") || "",
                 pembimbing: params.get("pembimbing") || "",
-                judul: params.get("judul") || ""
+                judul: params.get("judul") || "",
+                linkGoogleDriveNaskahTesis: params.get("linkGoogleDriveNaskahTesis") || ""
             };
         }
 
@@ -242,6 +249,15 @@
             document.getElementById("nim").textContent = data.nim;
             document.getElementById("pembimbingUtama").textContent = data.pembimbing;
             document.getElementById("judulTesis").textContent = data.judul;
+
+            const linkCell = document.getElementById("linkGoogleDriveNaskahTesis");
+            const url = data.linkGoogleDriveNaskahTesis;
+
+            if (url) {
+                linkCell.innerHTML = `<a href="${url}" target="_blank" rel="noopener noreferrer">${url}</a>`;
+                } else {
+                linkCell.textContent = "";
+            }            
         });
         </script>
 </body>
