--- a/kemahkerja/page_penilaiankkshift3.html
+++ b/kemahkerja/page_penilaiankkshift3.html
@@ -73,9 +73,7 @@
         <!-- Dosen Penguji -->
         <div class="mb-4 position-relative" style="max-width: 500px;">
             <label for="dosenPenguji" class="form-label fw-bold">Dosen Pembimbing:</label>
-            <input type="text" id="dosenPenguji" class="form-control" placeholder="Ketik nama dosen...">
-            <ul id="dosenSuggestions" class="list-group position-absolute" 
-                style="z-index:1000; display:none; width:100%;"></ul>
+            <input type="text" id="dosenPenguji" class="form-control bg-light" readonly>
         </div>
 
         <!-- Penilaian KK Shift 1 -->
@@ -291,6 +289,7 @@
         <!-- Buttons -->
         <div class="mt-6 text-end">
             <button id="btnKirim" class="btn btn-primary me-2">Kirim Nilai</button>
+            <!-- <button id="btnLoadNilai" class="btn btn-outline-primary">Load Nilai</button> -->
         </div>
 
         <div class="mt-5">
