--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     </ul>
                 </div>
             </li>
+            <li><a href="#" onclick="loadPage('prgg/dashboard_prgg.html', 'prgg')" class="nav-link"><i class="bi bi-diagram-3 me-2"></i> <span class="label">Penilaian PRGG</span></a></li>
             <li><a href="#" class="nav-link"><i class="bi bi-briefcase me-2"></i> <span class="label">Penilaian Kerja Praktik</span></a></li>
-            <li><a href="#" class="nav-link"><i class="bi bi-diagram-3 me-2"></i> <span class="label">Penilaian PRGG</span></a></li>
             <li><a href="#" class="nav-link" id="btnLogout"><i class="bi bi-box-arrow-right me-2"></i><span class="label">Log Out</span></a></li>
         </ul>
     </div>
@@ -193,6 +193,7 @@
     <script src="kemahkerja/kkshift2.js"></script>
     <script src="kemahkerja/kkshift3.js"></script>
     <script src="kemahkerja/kkstudio.js"></script>
+    <script src="prgg/prgg.js"></script>
     <script src="dashboard.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -260,6 +261,8 @@
                         loadKKShift3Data(); 
                     } if (page === "kemahkerja/dashboard_kkstudio.html") {
                         loadKKStudioData(); 
+                    } if (page === "prgg/dashboard_prgg.html") {
+                        loadPRGGData(); 
                     }
 
                     history.pushState({page}, "", `?page=${key}`);
@@ -323,6 +326,10 @@
             } else if (pageKey === "kkstudio") {
                 loadPage("kemahkerja/dashboard_kkstudio.html", "kkstudio");
             } 
+
+            else if (pageKey === "prgg") {
+                loadPage("prgg/dashboard_prgg.html", "prgg");
+            }
             
             else {
                 
