--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Dashboard SIPINTAS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         body {
             min-height: 100vh;
@@ -337,38 +338,57 @@
         });
     </script>
     <script>
-    document.getElementById("btnLogout").addEventListener("click", (e) => {
-    e.preventDefault();
+        document.getElementById("btnLogout").addEventListener("click", (e) => {
+            e.preventDefault();
 
-    if (!confirm("Are you sure you want to log out?")) return;
+            Swal.fire({
+                title: 'Keluar dari Sistem?',
+                text: "Anda harus login kembali untuk mengakses data penilaian.",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#dc3545', // Bootstrap Danger color
+                cancelButtonColor: '#6c757d', // Bootstrap Secondary color
+                confirmButtonText: 'Ya, Keluar',
+                cancelButtonText: 'Batal',
+                reverseButtons: true
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    performLogout();
+                }
+            });
+        });
 
-    try {
-        const userRaw = sessionStorage.getItem("user");
-        const user = userRaw ? JSON.parse(userRaw) : null;
-        const email = user?.email;
+        function performLogout() {
+            try {
+                const userRaw = sessionStorage.getItem("user");
+                const user = userRaw ? JSON.parse(userRaw) : null;
+                const email = user?.email;
 
-        if (window.google?.accounts?.id) {
-        // Prevent automatic re-login
-        google.accounts.id.disableAutoSelect();
+                if (window.google?.accounts?.id) {
+                    google.accounts.id.disableAutoSelect();
+                    if (email) {
+                        google.accounts.id.revoke(email, () => {
+                            console.log("Google session revoked");
+                        });
+                    }
+                }
+            } catch (err) {
+                console.warn("Logout cleanup error:", err);
+            }
 
-        // Revoke Google session if email is available
-        if (email) {
-            google.accounts.id.revoke(email, () => {
-            console.log("Google session revoked for", email);
+            sessionStorage.clear();
+            localStorage.clear();
+            
+            // Optional: Show a quick success message before redirecting
+            Swal.fire({
+                title: 'Berhasil Keluar',
+                icon: 'success',
+                timer: 1500,
+                showConfirmButton: false
+            }).then(() => {
+                window.location.href = "login.html";
             });
         }
-        }
-    } catch (err) {
-        console.warn("Logout cleanup error:", err);
-    }
-
-    // Clear session
-    sessionStorage.clear();
-    localStorage.clear();
-
-    // Redirect back to login
-    window.location.href = "login.html";
-    });
     </script>
 
 </body>
