--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <li><a href="#" onclick="loadPage('prgg/dashboard_prgg.html', 'prgg')" class="nav-link"><i class="bi bi-diagram-3 me-2"></i> <span class="label">Penilaian PRGG</span></a></li>
             <li><a href="#" class="nav-link"><i class="bi bi-briefcase me-2"></i> <span class="label">Penilaian Kerja Praktik</span></a></li>
             <li><a href="#" class="nav-link" id="btnLogout"><i class="bi bi-box-arrow-right me-2"></i><span class="label">Log Out</span></a></li>
+            <li><a href="https://ugm.id/mydtgd" class="nav-link" target="_blank" rel="noopener noreferrer"><i class="bi bi-grid-fill me-2"></i><span class="label">Ke myDTGD</span></a></li>
         </ul>
     </div>
 
