--- a/skripsi/page_beritaujianskripsi.html
+++ b/skripsi/page_beritaujianskripsi.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="../assets/logo.png">
   <title>Berita Acara Seminar Skripsi</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
     .inline-field {
       border: none;
@@ -102,7 +102,7 @@
                 <option value="Ruang Lab Survei Keteknikan"></option>
                 <option value="Ruang Lab GGGF"></option>
             </datalist>
-            Departemen Teknik Geodesi FT UGM, telah diselenggarakan penilaian Proposal Skripsi Mahasiswa Program Studi Sarjana Teknik Geodesi, Departemen Teknik Geodesi Fakultas Teknik UGM:
+            Departemen Teknik Geodesi FT UGM, telah diselenggarakan penilaian Ujian Skripsi Mahasiswa Program Studi Sarjana Teknik Geodesi, Departemen Teknik Geodesi Fakultas Teknik UGM:
         </p>
 
         <!-- Info table -->
@@ -219,8 +219,18 @@
         </div>
 
         <!-- Loading Overlay -->
-        <div id="loadingOverlay">
-            <div class="spinner-border text-primary" role="status"></div>
+        <div id="loadingOverlay" 
+            style="display:none; position:fixed; top:0; left:0; width:100%; height:100%;
+                    background:rgba(255,255,255,0.8); z-index:2000; 
+                    flex-direction: column; align-items: center; justify-content: center;">
+                    
+            <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+
+            <div id="loadingText" style="margin-top: 15px; font-weight: bold; color: #007bff;">
+                Mengirim data ke sistem...
+            </div>
         </div>
     </div>
   </div>
@@ -280,6 +290,7 @@
   <script>
     function showLoading(show) {
     document.getElementById("loadingOverlay").style.display = show ? "flex" : "none";
+    document.querySelector("#loadingOverlay div:last-child").innerText = "Mengambil data dari sistem...";
     }
 
     document.getElementById("btnLoadNilaiUjianSkripsi").addEventListener("click", async () => {
