--- a/tesis/page_penilaianujiantesis.html
+++ b/tesis/page_penilaianujiantesis.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/png" href="../assets/logo.png">
     <title>PENILAIAN SEMINAR TESIS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -309,8 +310,18 @@
                     </a>
                 </div>
 
-                <div id="loadingOverlay">
-                    <div class="spinner"></div>
+                <div id="loadingOverlay" 
+                    style="display:none; position:fixed; top:0; left:0; width:100%; height:100%;
+                            background:rgba(255,255,255,0.8); z-index:2000; 
+                            flex-direction: column; align-items: center; justify-content: center;">
+                            
+                    <div class="spinner-border text-primary" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+
+                    <div id="loadingText" style="margin-top: 15px; font-weight: bold; color: #007bff;">
+                        Mengirim data ke sistem...
+                    </div>
                 </div>
 
                 <!-- Notification Modal -->
