--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </div>
             </li>
             <li><a href="#" onclick="loadPage('prgg/dashboard_prgg.html', 'prgg')" class="nav-link"><i class="bi bi-diagram-3 me-2"></i> <span class="label">Penilaian PRGG</span></a></li>
-            <li><a href="#" class="nav-link"><i class="bi bi-briefcase me-2"></i> <span class="label">Penilaian Kerja Praktik</span></a></li>
+            <li><a href="#" onclick="loadPage('kerjapraktik/dashboard_kerjapraktik.html', 'kerjapraktik')" class="nav-link"><i class="bi bi-briefcase me-2"></i> <span class="label">Penilaian Kerja Praktik</span></a></li>
             <li><a href="#" class="nav-link" id="btnLogout"><i class="bi bi-box-arrow-right me-2"></i><span class="label">Log Out</span></a></li>
             <li><a href="https://ugm.id/mydtgd" class="nav-link" target="_blank" rel="noopener noreferrer"><i class="bi bi-grid-fill me-2"></i><span class="label">Ke myDTGD</span></a></li>
         </ul>
@@ -196,6 +196,7 @@
     <script src="kemahkerja/kkshift3.js"></script>
     <script src="kemahkerja/kkstudio.js"></script>
     <script src="prgg/prgg.js"></script>
+    <script src="kerjapraktik/kerjapraktik.js"></script>
     <script src="dashboard.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -265,6 +266,8 @@
                         loadKKStudioData(); 
                     } if (page === "prgg/dashboard_prgg.html") {
                         loadPRGGData(); 
+                    } if (page === "kerjapraktik/dashboard_kerjapraktik.html") {
+                        loadKPData(); 
                     }
 
                     history.pushState({page}, "", `?page=${key}`);
@@ -331,6 +334,10 @@
 
             else if (pageKey === "prgg") {
                 loadPage("prgg/dashboard_prgg.html", "prgg");
+            }
+
+            else if (pageKey === "kerjapraktik") {
+                loadPage("kerjapraktik/dashboard_kerjapraktik.html", "kerjapraktik");
             }
             
             else {
