Update judul realisasi KP

--- a/kerjapraktik/page_penilaiankp.html
+++ b/kerjapraktik/page_penilaiankp.html
@@ -148,6 +148,7 @@
                 <th>Nama</th>
                 <th>NIM</th>
                 <th>Foto</th>
+                <th>Keterangan</th>
             </tr>
             </thead>
             <tbody id="tabelMahasiswa">
@@ -162,9 +163,16 @@
                 <td id="pembimbing"></td>
             </tr>
             <tr>
-                <td class="info-label">Judul Kegiatan KP</td>
+                <td class="info-label">Judul Usulan KP</td>
                 <td class="info-colon">:</td>
-                <td id="judulTopikKP"></td>
+                <td id="judulUsulanTopikKP"></td>
+            </tr>
+            <tr>
+                <td class="info-label">Judul Realisasi KP</td>
+                <td class="info-colon">:</td>
+                <td id="judulRealisasiTopikKP">
+                    <textarea id="inputJudulRealisasi" class="form-control" rows="2" placeholder="Masukkan Judul Realisasi KP di sini..." style="width: 100%; min-width: 400px; resize: vertical;"></textarea>
+                </td>
             </tr>
             <tr>
                 <td class="info-label">Link Google Drive Proposal KP</td>
