Update instansi KP

--- a/kerjapraktik/page_penilaiankp.html
+++ b/kerjapraktik/page_penilaiankp.html
@@ -163,6 +163,11 @@
                 <td id="pembimbing"></td>
             </tr>
             <tr>
+                <td class="info-label">Instansi KP</td>
+                <td class="info-colon">:</td>
+                <td id="instansiKP"></td>
+            </tr>
+            <tr>
                 <td class="info-label">Judul Usulan KP</td>
                 <td class="info-colon">:</td>
                 <td id="judulUsulanTopikKP"></td>
