Update load nilai KP

--- a/kerjapraktik/page_penilaiankp.html
+++ b/kerjapraktik/page_penilaiankp.html
@@ -320,7 +320,7 @@
         <!-- Buttons -->
         <div class="mt-6 text-end">
             <button id="btnKirim" class="btn btn-primary me-2">Kirim Nilai</button>
-            <!-- <button id="btnLoadNilai" class="btn btn-outline-primary">Load Nilai</button> -->
+            <button id="btnLoadNilai" class="btn btn-outline-primary">Load Nilai</button>
         </div>
 
         <!-- Penilaian KP oleh Instansi KP -->
@@ -450,7 +450,7 @@
         <!-- Buttons -->
         <div class="mt-6 text-end">
             <button id="btnKirimInstansi" class="btn btn-primary me-2">Kirim Nilai Instansi KP</button>
-            <!-- <button id="btnLoadNilai" class="btn btn-outline-primary">Load Nilai</button> -->
+            <button id="btnLoadNilaiInstansi" class="btn btn-outline-primary">Load Nilai Instansi</button>
         </div>
 
         <div class="mt-5">
